# smarteros-webhook-handler

./: .env.example  .gitignore  DEPLOYMENT-READY.md  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: build.yml  deploy.yml  test.yml
src/: main.py
src/utils/: logger.py  storage.py
src/webhooks/: __init__.py  test.py  verify.py
tests/: test_signature.py  test_webhook.py
